force-app/main/default/objects/Assignment__c/fields/Currently_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Currently_Assigned__c</fullName>
    <formula>AND(
  NOT(ISBLANK(Start_Date__c)),
  NOT(ISBLANK(End_Date__c)),
  TODAY() &gt;= Start_Date__c,
  TODAY() &lt;= End_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currently Assigned</label>
    <type>Checkbox</type>
</CustomField>