force-app/main/default/objects/Assignment__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of this assignment(e.g. Design, Development)</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>