force-app/main/default/objects/Assignment__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Date that the assigned resource finishes work on the project</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>