force-app/main/default/objects/Assignment__c/fields/Hourly_Cost__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Cost__c</fullName>
    <description>Internal cost of the assigned resource</description>
    <label>Hourly Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>