force-app/main/default/objects/Assignment__c/fields/Planned_Cost__c.field-meta.xml
<CustomField>
    <fullName>Planned_Cost__c</fullName>
    <formula>Total_Hours__c * Hourly_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>