force-app/main/default/objects/Assignment__c/fields/Planned_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Planned_Revenue__c</fullName>
    <formula>Total_Hours__c * Hourly_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>