force-app/main/default/objects/Assignment__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Role of the resource on this project(e.g. Developer, instructor)</description>
    <label>Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>