force-app/main/default/objects/Assignment__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date that the assigned resource begins work on the project</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>