force-app/main/default/objects/Assignment__c/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <description>Numbers of hours to be worked during this assignment</description>
    <label>Total Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>